2011-02-14  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        nrwt multiprocessing: add code to handle interrupts and wedged
        threads.
        https://bugs.webkit.org/show_bug.cgi?id=54072

        * Scripts/webkitpy/layout_tests/layout_package/manager_worker_broker.py:
        Adds the cancel(), is_alive(), join(), and log_wedged_worker()
        methods to the WorkerConnection class

        * Scripts/webkitpy/layout_tests/layout_package/manager_worker_broker_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner2.py:
        * Scripts/webkitpy/layout_tests/layout_package/worker.py:
        Adds the cancel() method to the Worker class

2011-02-14  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        update the NRWT multiprocessing code to spawn multiple workers
        instead of just using one.

        https://bugs.webkit.org/show_bug.cgi?id=54071

        * Scripts/webkitpy/layout_tests/layout_package/test_runner2.py:

2011-02-12  Chang Shu  <cshu@webkit.org>

        Unreviewed.

        Update my own email addresses and IRC nickname.

        * Scripts/webkitpy/common/config/committers.py:

2011-02-11  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        This patch adds to NRWT most of the support needed to run the new
        message-based workers in separate threads or processes. The code
        isn't fully complete yet because we don't support cancel() or
        is_alive().

        https://bugs.webkit.org/show_bug.cgi?id=54070

        * Scripts/webkitpy/layout_tests/layout_package/manager_worker_broker.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager_worker_broker_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner2.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/mock_drt.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py: