@@ -1,5 +1,16 @@
 2011-02-14  Dirk Pranke  <dpranke@chromium.org>
 
+        Reviewed by Ojan Vafai.
+
+        This patch updates NRWT to add per-worker and per-shard test stats
+        into TestRunner2, bringing it to parity with TestRunner.
+
+        https://bugs.webkit.org/show_bug.cgi?id=54074
+
+        * Scripts/webkitpy/layout_tests/layout_package/test_runner2.py:
+
+2011-02-14  Dirk Pranke  <dpranke@chromium.org>
+
         Reviewed by Tony Chang.
 
         nrwt multiprocessing: add code to handle interrupts and wedged
